--- a/public/js/templates/init/header.html
+++ b/public/js/templates/init/header.html
@@ -4,7 +4,7 @@ var user = APP.user
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#freeshgame">Freesh Game</a>
+            <a class="navbar-brand" href="#mafia">Mafia</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -12,7 +12,7 @@ var user = APP.user
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#get/users/id=<%= user.id %>"><%- user.get('name') %>
                     <span class="sr-only">(current)</span></a></li>
-                <li><a href="#bue/freeshki">Freeshki: <%- user.get('freeshki') %></a></li>
+                <li><a href="#bue/freeshki">$: <%- user.get('freeshki') %></a></li>
             </ul>
             <% } %>
             <ul class="nav navbar-nav navbar-right">
